--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,7 @@
         "cwctype": "cpp",
         "fstream": "cpp",
         "mutex": "cpp",
-        "optional": "cpp"
+        "optional": "cpp",
+        "typeindex": "cpp"
     }
 }
