--- a/config/hap_livox.yaml
+++ b/config/hap_livox.yaml
@@ -1,14 +1,30 @@
 common:
     lid_topic:  "/livox/lidar"
-    imu_topic:  "/imu"
+    imu_topic:  "/livox/imu"
+    camera_topic: "/usb_cam/image_raw"
     time_sync_en: false         # ONLY turn on when external time synchronization is really not possible
+
+    rootDir: "/home/fyx/fastlio2/"
+    savePCD: false                         # https://github.com/TixiaoShan/LIO-SAM/issues/3
+    savePCDDirectory: "PCDs/"        
+    saveSCD: false 
+    saveSCDDirectory: "SCDs/"
+    saveLOG: false
+    saveLOGDirectory: "LOG/"
+    map_save_en: true  # global map
+    pcd_save_interval: 1                 # how many LiDAR frames saved in each pcd
     
 preprocess:
     lidar_type: 1                # 1 for Livox serials LiDAR, 2 for Velodyne LiDAR
     scan_line:  6
     blind: 4
+    feature_enabled: 0  # bool
+    point_filter_num: 1 # bool
+    scan_rate: 10 
 
 camera:
+    camera_en: false
+    cube_len: 200
     camera_external: [ 0.000000, -1.000000, 0.000000, 0.000000,
                        0.000000, 0.000000, -1.000000, 0.300000,
                        1.000000, 0.000000, 0.000000, 0.000000,
@@ -25,10 +41,33 @@ mapping:
     fov_degree:    100
     det_range:     260.0
     extrinsic_est_en:  true      # true: enable the online estimation of IMU-LiDAR extrinsic
+    mappingSurfLeafSize: 0.2
+    keyframeAddingDistThreshold: 1.0
+    keyframeAddingAngleThreshold: 0.2
     extrinsic_T: [ 0.05512, 0.02226, -0.0297 ]
     extrinsic_R: [ 1, 0, 0,
                    0, 1, 0,
                    0, 0, 1]
+
+ikdtree:
+    max_iteration: 4
+    recontructKdTree: false  # if path is too large, the rviz will crash, but default is false
+    filter_size_map_min: 0.2
+
+loop:
+    loopClosureEnableFlag: true
+    loopClosureFrequency: 1.0
+    historyKeyframeSearchRadius: 10.0
+    historyKeyframeSearchTimeDiff: 30.0
+    historyKeyframeSearchNum: 1
+    historyKeyframeFitnessScore: 0.3
+
+segment:
+    ground_en: false
+    tollerance_en: false
+    sensor_height: 1.5
+    z_tollerance: 2.0
+    rotation_tollerance: 0.2
 
 publish:
     path_en:  true
@@ -36,11 +75,8 @@ publish:
     dense_publish_en: true       # false: low down the points number in a global-frame point clouds scan.
     scan_bodyframe_pub_en: true  # true: output the point cloud scans in IMU-body-frame
 
-pcd_save:
-    pcd_save_en: true
-    interval: -1                 # how many LiDAR frames saved in each pcd file; 
-                                 # -1 : all frames will be saved in ONE pcd file, may lead to memory crash when having too much frames.
-
-# Export settings
-savePCD: false                         # https://github.com/TixiaoShan/LIO-SAM/issues/3
-savePCDDirectory: "~/workspace/test-code/fast-lio-sam_ws/src/FAST_LIO_SAM/PCD/"        # in your home folder, starts and ends with "/". Warning: the code deletes "LOAM" folder then recreates it. See "mapOptimization" for implementation
+visualization:
+    globalMapVisualizationSearchRadius: 10.0
+    globalMapVisualizationPoseDensity: 5
+    globalMapVisualizationLeafSize: 0.5
+    visulize_IkdtreeMap: false
