--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,7 @@ add_library(preprocess  src/preprocess.cpp)
 add_library(sc include/sc-relo/Scancontext.cpp)
 add_library(incremental_mapping include/multi-session/Incremental_mapping.cpp include/sc-relo/Scancontext.cpp)
 add_library(pose_estimator include/online-relo/pose_estimator_new.cpp include/sc-relo/Scancontext.cpp)
+add_library(fpfh_teaser include/teaser_toolkit/fpfh_teaser.cpp ${TEASER_LIBRARIES})
 # add_library(map_manager include/online-relo/Map_Manager.cpp)
 
 # fastlio2 mapping
