--- a/config/online_relo.yaml
+++ b/config/online_relo.yaml
@@ -1,7 +1,7 @@
 common:
   rootDir: "/home/fyx/fastlio2/src/onine_relo"
   pointCloudTopic:  "/os1_points" #"/os_cloud_node/points" #"velodyne_points"    "points_raw"     rslidar_points      # Point cloud data
-  imuTopic: "/imu/data" #"/os_cloud_node/imu" #"imu_data" #"imu_raw"          # IMU data
+  imuTopic: "/imu/data_raw" #"/os_cloud_node/imu" #"imu_data" #"imu_raw"          # IMU data
   use_lio: true
 
 preprocess:
